fixed profile fetched bug